<resources>
    <string name="app_name">CSI</string>
    <string name="badguy">Bad guy</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="suspect_name">Guy Random</string>
    <string name="suspect_gender">Male</string>
    <string name="age">Age</string>
    <string name="suspect_age">50</string>
    <string name="bounty">Bounty</string>
    <string name="suspect_bounty">Twix</string>
    <string name="details">Details</string>
    <string name="suspect_details">Wat zyde gy tot my, gy kleine duyvelspecht? Ik beveel ge er kennis van te neemen dat ik met lof ende goedkeuring een kaapersbrief heb gehad van Willem van Oranje ende betrokken ben geweest by talryke geheyme offensieven tegen Alva en de zyne, en zelfstandig meer dan drie honderden Spanjolen heb omgelegd. Ik ben gehard by den Katergeuzen en ben den beste schutter onder den Nederlandsche vlag. Ge bent niet meer dan myn zoveelste doelwit. Ik zal u uyt myne gewest verwyderen met een nauwkeurigheid die de wereld nog nimmer aangechouwen had. Let op myn verdomde woorden! Gy denkt dat ge deze leuhgenpraat aan my kan verkoopen per postduyf? Gy had tweemaal moeten denken, cattengehspuys! In dezen tyd dat ik deze missive opstel, stuur ik opdracht naar myn geheymen samenstel van verspieders ende vloerduyven, verspreid door den Republiek der Zeven Verenigde Nederlanden en wordt dezen postduyf gevolgd, dus ge kunt zich maar beter voorbereiden op den storm, rabaut. Den storm die het bedroevenden klyne ding dat gy uw leven noemt weg zal vaagen. Gy bent dood, kind. Ik kan overal, ten alle tyden zyn ende ik kan ge op zeven honderden wyzen doden, ende dat is slechts met myne bloten handen. Niet alleen zyt ik veelomvattend geoefend in den ongewapenden krygskunst, maar alsmede heb ik het voltallige arsenaal der watergeuzen ter myner beschikking ende ik zal dat benutten om uwer lamlendigen achtereinde van het vastenland te vagen, gy klynen schobbejak. Als gy had geweten wat voor eene goddelooze vergelding uw \'geestige\' missive teweeg zou brengen, had ge misschien op uwen tong gebeten. Maar dat kon ge niet. Gy deed het niet ende nu zult ge de tol betalen, gy verdomde smeerkanis. Ik zal furie over u schyten en gy zult er in verzuypen. Ge zyt dood, hoerenzeune.</string>
    <string name="report">Report</string>
    <string name="action_picture">Take Picture</string>
    <string name="action_gps">GPS Position</string>
    <string name="action_back">Back</string>
    <string name="action_send">Send</string>
    <string name="action_call">Call 113</string>
    <string name="criminal_not_found">Criminal not found</string>
    <string name="crimes">Crimes</string>
    <string name="sca">SCA</string>
</resources>
